# hci-luminos

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  demo-luminos.wyg
android-backend-src/res/drawable/: splash.xml
android-src/res/drawable/: splash.xml
cmake/: BuildDmxManagerCore.cmake  FindQt5.cmake
cmake/android/: AddQtAndroidApk.cmake  AndroidManifest.xml.in  FinishQtDeployConfiguration.cmake  SetQtAndroidAppPath.cmake  licence.txt
cmake/repositories/: repositories-online.cmake
cmake/toolchain/: android.toolchain.cmake
images/: iconidea.pdn  images.qrc
images/apple/: AppIcon.icns  BackendAppIcon.icns
images/windows/: iconbackend.rc
include/: FixturesModel.hpp  SensorModel.hpp
qml/: ColorPage.qml  ColorPicker.qml  ControlPage.qml  EffectPage.qml  FixtureButton.qml  InfoPage.qml  MainBackend.qml  MainPage.qml  MapPane.qml  Settings.qml  SmallMapPane.qml  WeatherWidget.qml  main.qml  qml.qrc
src/: FixturesModel.cpp  MainBackend.cpp  SensorModel.cpp  main.cpp
